fixed the layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,63 @@
+@import 'normalize.css';
+
 * {
     padding: 0;
     margin: 0;
     font-family: "Karla", sans-serif;
-    color: #000000;
     box-sizing: border-box;
 }
+button {
+    display: inline-block;
+    border: none;
+    padding: 1rem 2rem;
+    margin: 0;
+    text-decoration: none;
+    background: #0069ed;
+    color: #ffffff;
+    font-family: sans-serif;
+    font-size: 1rem;
+    cursor: pointer;
+    text-align: center;
+    transition: background 250ms ease-in-out, 
+                transform 150ms ease;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+button:hover,
+button:focus {
+    background: #0053ba;
+}
+
+
+/* button:focus {
+    outline: 1px solid #fff;
+    outline-offset: -4px;
+} */
+
+button:active {
+    transform: scale(0.99);
+}
+
 .container {
     position: relative;
 }
 
-.overLay{
-    text-align: center;
+.layout{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     background-color: #F5F7FB;
+    padding: 40px 80px;
+    overflow: hidden;
     position: relative;
+    width: 100vw;
 }
-
+.overLay{
+    text-align: center;
+    height: 100vh;
+}
 .overlayTitle {
     font-size: 32px;
     margin-bottom: 10px;
@@ -31,7 +71,7 @@
 }
 
 .overlayButton {
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: #4D5B9E;
     color: #F5F7FB;
     font-size: 16px;
@@ -39,12 +79,13 @@
     width: 200px;
     height: 50px;
     border-width: 0px;
+    cursor: hand;
 }
 
 .blueBlob{
     position: absolute;
     left: -150px;
-    bottom: -100px;
+    bottom: -150px;
     
 }
 .yellowBlob {
@@ -52,16 +93,52 @@
     right: -150px;
     top: -150px;
 }
-/*
-Font: size, height, type, color
-background color
-margin/padding
-button style
-*/
+
 
 .mainQuiz{
     z-index: -1;
-    position: absolute;
+}
 
+.quizQuestion {
+    font-family: "Karla", sans-serif;
+    font-size: 16px;
+    color: #293264;
+    margin-top: 30px;
+}
+
+.quizAnswers {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    list-style: none;
+    margin-top: 10px;
+}
+
+.quizAnswerButton {
+    font-family: "Inter", sans-serif;
+    font-size: 10px;
+    padding: 5px 10px;
+    border-radius: 10px;
+    border-width: 0;
+    margin-right: 10px;
+}
+
+.checkAnswers, .newQuiz {
+    background-color: #4D5B9E;
+    color: #F5F7FB;
+    padding: 10px 20px;
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    margin: auto; 
+    margin-top: 30px;
+    border-radius: 20px;
+    border-width: 0;
+    width: 200px;
+    height:50px;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
 }
 
